fix fetch on mobile

--- a/components/SideBar/SideBar.module.scss
+++ b/components/SideBar/SideBar.module.scss
@@ -13,6 +13,7 @@
     flex-direction: column;
 
     left: 0;
+    z-index: 100;
 
     transition: left 0.2s ease-out;
 
